[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GeostarFill-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Music/Jason-Shaw-RUNNING-WATERS.wav" type="AudioStream" id=3]
[ext_resource path="res://Menu_Sprite.jpg" type="Texture" id=4]
[ext_resource path="res://Pawns/Mimic_Char.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 95
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
extra_spacing_char = 4
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -300.0
margin_right = 93.0
custom_constants/separation = 30

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 352.0
margin_bottom = 65.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 352.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 352.0
margin_bottom = 255.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 1 )
text = "QUIT"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Menu_Sprite" type="Sprite" parent="."]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 960, 540 )
z_index = -1
texture = ExtResource( 4 )

[node name="TITLE" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -557.5
margin_top = 50.0
margin_right = 557.5
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.866667, 0.435294, 0.435294, 1 )
text = "HUNGRY MIMIC"

[node name="INSTRUCTIONS" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -527.5
margin_top = -131.5
margin_right = 527.5
margin_bottom = 131.5
custom_fonts/font = SubResource( 3 )
text = "WASD or ARROWS to MOVE

SPACE to PICKUP in RANGE

BUMP resources to DAMAGE

COLLECT highest score in remaining TURNS

OR try for fast TIME and SCORE"
align = 1

[node name="TIP" type="Label" parent="."]
margin_left = 336.0
margin_top = 900.0
margin_right = 1617.0
margin_bottom = 935.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.466667, 0.466667, 0.466667, 1 )
text = "tip: upgrades are scattered around the map"
align = 1

[node name="MadeBy" type="Label" parent="."]
margin_left = 1284.0
margin_top = 996.0
margin_right = 1884.0
margin_bottom = 1031.0
custom_fonts/font = SubResource( 3 )
text = "made by JOSHUA SILVA"
align = 1

[node name="Mimic1" type="Sprite" parent="."]
position = Vector2( 1380, 280 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
hframes = 5
frame = 1

[node name="Mimic2" type="Sprite" parent="."]
position = Vector2( 528, 280 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
hframes = 5

[node name="Mimic3" type="Sprite" parent="."]
position = Vector2( 960, 280 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
hframes = 5
frame = 4
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
